[package]
name = "beethoven"
description = "A Trait-based client that let you compose program extremely easily"
version = "0.0.1"
license = "MIT"
edition = "2024"

[features]
default = ["jupiter", "kamino", "raydium-cpmm"]
jupiter = []
kamino = []
raydium-cpmm = []

[dependencies]
pinocchio = "0.9.2"
